ABSLAMC | RS2 | Bug16 | Updated LWC to change the name of Create FTR Case button

--- a/force-app/main/default/lwc/asf_createFTRCase/asf_createFTRCase.html
+++ b/force-app/main/default/lwc/asf_createFTRCase/asf_createFTRCase.html
@@ -56,9 +56,7 @@
         <div class="slds-modal__footer slds-m-horizontal_small">
             <button class="slds-button slds-button_neutral" aria-label="Cancel and close"
                 onclick={invokeCloseModal}>Cancel</button>
-            <button class="slds-button slds-button_brand" onclick={handleSubmit} disabled={submitButtonDisabled}>Create
-                FTR
-                Case</button>
+            <button class="slds-button slds-button_brand" onclick={handleSubmit} disabled={submitButtonDisabled}>Instant Close</button>
         </div>
     </div>
 </template>
