--- a/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
+++ b/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
@@ -35,13 +35,21 @@
                 </tbody>
             </table>
         </template>
-
-        <template if:true={resultMessageValue}>
+<!-- Error Message for Healthy Heart Score -->
+        <template if:true={displayError}>
+            <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
+                <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
+                <span style="font-size: 0.90rem;">{errorMessages}</span>
+            </div>
+        </template>
+<!-- Result Message for Healthy Heart Score, displayed only if no error -->
+        <template if:true={showResultMessage}>
             <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
                 <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
                 <span style="font-size: 0.90rem;">{resultMessageValue}</span>
             </div>
         </template>
+        
     </lightning-card>
 
 <br/>
