--- a/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
+++ b/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
@@ -7,10 +7,34 @@
 
             </div>
         </div>
-        <template if:true={isLoading}>
-            <div class="slds-backdrop" role="presentation"></div>
-            <div class="slds-fade-in-open slds-modal_large">
-                <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
+    <lightning-card title="Healthy Heart Score">
+        
+        <br/>
+        <!-- Data Tables -->
+        <template if:true={showTable}>
+            <table class="slds-table slds-table_bordered slds-table_cell-buffer slds-table_fixed-layout">
+                <thead>
+                    <tr >
+                        <th>Healthy Heart</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <template for:each={table} for:item="item">
+                        <tr key={item.attributeCode}>
+                            <td>{item.attributeCode}</td>
+                            <td>{item.attributeValue}</td>
+                        </tr>
+                    </template>
+                </tbody>
+            </table>
+        </template>
+<!-- Error Message for Healthy Heart Score -->
+<!-- Result Message for Healthy Heart Score, displayed only if no error -->
+        <template if:true={resultMessageValue}>
+            <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
+                <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
+                <span style="font-size: 0.90rem;">{resultMessageValue}</span>
             </div>
         </template>
         
