--- a/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
+++ b/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
@@ -20,17 +20,16 @@
             <lightning-layout class="slds-m-bottom_large slds-grid slds-wrap">
                 <lightning-layout-item size="4" class="slds-m-right_x-small">
                     <lightning-input type="date" name="Startdate" value={startDate} onchange={handleStartDateChange}
-                        label="From Date" class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
+                        label="From Date" class="date-format-hide" format='YYYY-MM-dd' disabled={disabled}>
                     </lightning-input>
                 </lightning-layout-item>
-                                <lightning-layout-item size="4" class="slds-m-right_small">
-                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} min={startDate}
-                        label="End Date" message-when-range-underflow="Please Choose a date more than start date"
-                        class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
-                    </lightning-input>
-                </lightning-layout-item>
-                <lightning-layout-item size="auto" class="slds-m-top_medium slds-m-left_medium">
-                    <lightning-button variant="brand" label="Search" onclick={handleSearch} disabled={isSearchDisabled} ></lightning-button>
+                    <lightning-layout-item size="4" class="slds-m-right_small">
+                        <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} 
+                            label="End Date" class="date-format-hide" format='YYYY-MM-dd'>
+                        </lightning-input>
+                    </lightning-layout-item>
+                    <lightning-layout-item size="auto" style="margin-top: 20px; margin-left: 16px;">
+                        <lightning-button variant="brand" label="Search" onclick={handleSearch} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
             </lightning-layout>
         </div>
