--- a/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
+++ b/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
@@ -11,13 +11,12 @@
             <lightning-layout class="slds-m-bottom_large slds-grid slds-wrap">
                 <lightning-layout-item size="4" class="slds-m-right_x-small">
                     <lightning-input type="date" name="Startdate" value={startDate} onchange={handleStartDateChange}
-                        label="From Date" class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
+                        label="From Date" class="date-format-hide" format='YYYY-MM-dd' disabled={disabled}>
                     </lightning-input>
                 </lightning-layout-item>
                                 <lightning-layout-item size="4" class="slds-m-right_small">
-                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} min={startDate}
-                        label="End Date" message-when-range-underflow="Please Choose a date more than start date"
-                        class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
+                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange}
+                        label="End Date"  class="date-format-hide" format='YYYY-MM-dd'>
                     </lightning-input>
                 </lightning-layout-item>
                 <lightning-layout-item  class="slds-m-right_small" style="padding-top:19px">
