--- a/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
+++ b/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
@@ -15,7 +15,7 @@
                     </lightning-input>
                 </lightning-layout-item>
                                 <lightning-layout-item size="4" class="slds-m-right_small">
-                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange}
+                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange}>
                     </lightning-input>
                 </lightning-layout-item>
                 <lightning-layout-item  class="slds-m-right_small" style="padding-top:19px">
