--- a/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
+++ b/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
@@ -11,14 +11,15 @@
             <lightning-layout class="slds-m-bottom_large slds-grid slds-wrap">
                 <lightning-layout-item size="4" class="slds-m-right_x-small">
                     <lightning-input type="date" name="Startdate" value={startDate} onchange={handleStartDateChange}
-                        label="From Date" class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
+                        label="From Date" class="date-format-hide" format='YYYY-MM-dd' disabled={disabled}>
                     </lightning-input>
                 </lightning-layout-item>
                                 <lightning-layout-item size="4" class="slds-m-right_small">
-                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange}>
+                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange}
+                        label="End Date"  class="date-format-hide" format='YYYY-MM-dd'>
                     </lightning-input>
                 </lightning-layout-item>
-                <lightning-layout-item  class="slds-m-right_small" style="padding-top:19px">
+                <lightning-layout-item  size="auto" style="margin-top: 20px; margin-left: 16px;">
                     <lightning-button variant="brand" label="Search" onclick={handleSearchClick} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
             </lightning-layout>
@@ -28,11 +29,6 @@
                     <span style="font-size: 0.90rem;">{errorMessageSearch}</span> 
                 </div>
             </template>  
-                </div>
-            </template> 
-            <template if:true={DateErrorMessage}>
-                <div class="slds-text-color_error">{DateErrorMessage}</div>
-            </template>
         </div>
 
         <div lwc:if = {displayTable}>
